--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -21,5 +21,6 @@ dependencies {
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.10.0'
 }
 
